--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -8,3 +8,23 @@
   top:-11px; 
   right:-8px;
 }
+.cart-list {
+  position: relative;
+  .cart-list-content {
+    position: absolute;
+    right: 0;
+    top: 40px;
+    width: 30vw;
+    display: none;
+    ul{
+      overflow-y: auto;
+      overflow-x: hidden;
+      max-height: 300px;
+    }
+  }
+  &:hover {
+    .cart-list-content{
+      display: block;
+    }
+  }
+}
