--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -1,11 +1,14 @@
 .banner {
   width: 100%;
   height: 50vh;
+  min-height: 200px;
+  max-height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   @media screen and (max-width: 767.98px) {
-    height: 35vh;
+    height: 60vh;
+    min-height: 240px;
   }
 }
 .banner1 {
