--- a/src/assets/scss/components/_cart.scss
+++ b/src/assets/scss/components/_cart.scss
@@ -1,3 +1,7 @@
-.cart-qty-width{
-  width:110px;
+.cart-qty-width {
+  width: 110px;
+}
+.cart-back-btn {
+  gap: 0.4rem;
+  font-size: 0.875rem;
 }
