--- a/src/assets/scss/components/_home.scss
+++ b/src/assets/scss/components/_home.scss
@@ -1,22 +1,42 @@
-.home{
+.home {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(https://i.imgur.com/9eW2X2l.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(https://i.imgur.com/9eW2X2l.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-.home-first-btn{
-  background-color: rgba(55,55,55,0.6);
+.home-first-btn {
+  background-color: rgba(55, 55, 55, 0.6);
   color: white;
-  &:hover{
-    background-color: rgba(55,55,55,0.6);
+  &:hover {
+    background-color: rgba(55, 55, 55, 0.6);
   }
-  &:active{
+  &:active {
     color: white !important;
   }
 }
-.more{
+.more {
   top: 55vh;
+}
+.top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 99;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+  opacity: 0.9;
+  i {
+    font-size: 24px;
+    color: #14213d;
+  }
+  @media screen and (max-width: 767.98px) {
+    bottom: 15px;
+    right: 15px;
+    i {
+      font-size: 20px;
+    }
+  }
 }
