--- a/src/assets/scss/components/_home.scss
+++ b/src/assets/scss/components/_home.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(https://i.imgur.com/9eW2X2l.jpg);
+    url(/src//assets/images/home-bg.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
