--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -13,11 +13,11 @@
 }
 .banner1 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(https://i.imgur.com/Skkse84.jpg);
+    url(/src/assets/images/banner1.jpeg);
 }
 .banner2 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-    url(https://i.imgur.com/wNfdDan.jpg);
+    url(/src/assets/images/banner2.jpeg);
 }
 .banner-title {
   top: 50%;
